# genai-handson-202402

./: README.md  home.py  pyproject.toml
.devcontainer/: devcontainer.json
essential-video/section3/: init.ipynb
pages/: function_calling.py
