[tool.poetry]
name = "genai-handson-202402"
version = "0.1.0"
description = ""
authors = ["krtsato <krtsatoc@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.31.1"
openai = "0.27.8"
pydantic = "1.10.12"
serpapi = "^0.1.5"
google-search-results = "^2.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
